--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^3.0.0",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "node-sphinx": "^1.0.17",
     "pug": "2.0.0-beta11"
   }
 }
