--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "form-data": "^3.0.0",
     "http-errors": "~1.6.3",
     "moment": "^2.29.1",
+    "momnet": "^2.28.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "node-sphinx": "^1.0.17",
